# mnist-in-mpi

./: .gitignore  CMakeLists.txt  README.md  evaluate.cpp  index.html  main  main.cpp  matrix.cpp  mnist  mnist_io.cpp  nn.cpp  reading.cpp  server.py  sketch-custom.min.js  utils.cpp  utils.h  vector.cpp
doc/: Paper.tex  references.bib
frontend/: index.html  sketch-custom.min.js
